--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/i18next-fs-backend": "^1.1.2",
     "@types/node": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "eslint": "^8.8.0",
@@ -32,6 +33,9 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "i18next": "^21.6.10",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-fs-backend": "^1.1.4",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
     "winston": "^3.5.1"
