--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@types/i18next-fs-backend": "^1.1.2",
     "@types/node": "^17.0.14",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
@@ -38,6 +39,7 @@
     "i18next-fs-backend": "^1.1.4",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
+    "uuid": "^8.3.2",
     "winston": "^3.5.1"
   }
 }
