--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,10 +13,12 @@
   "author": "Craig Wisniewski",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/i18next-fs-backend": "^1.1.2",
     "@types/node": "^17.0.14",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
@@ -33,13 +35,17 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "i18next": "^21.6.10",
     "i18next-express-middleware": "^2.0.0",
     "i18next-fs-backend": "^1.1.4",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.4.1",
+    "typesocket": "^1.0.1",
     "uuid": "^8.3.2",
-    "winston": "^3.5.1"
+    "winston": "^3.5.1",
+    "ws": "^8.4.2"
   }
 }
