--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/cwisniew/refactored-octo-system#readme",
   "workspaces": [
     "packages/server",
-    "packages/ui"
+    "packages/client"
   ],
   "dependencies": {
     "concurrently": "^7.0.0",
