--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "concurrently \"npm run -w packages/server start:nodemon\"  \"npm run -w packages/ui start\"",
+    "start": "concurrently \"npm run -w packages/server start:nodemon\"  \"export PORT=3001 && npm run -w packages/client start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,9 +27,9 @@
     "winston": "^3.5.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-license-header": "^0.4.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -37,6 +37,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-unicorn": "^40.1.0",
     "prettier": "^2.5.1",
-    "typedoc": "^0.22.11"
+    "typedoc": "^0.22.12"
   }
 }
