--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
